Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo Simples</title>
+    <title>Space Shooter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game">
         <div id="player"></div>
-        <div id="obstacle"></div>
     </div>
-    <p id="message">Toque na tela, clique ou pressione espaço para pular!</p>
+    <p id="score">Pontuação: 0</p>
     <script src="script.js"></script>
 </body>
 </html>
